--- a/core3/presentation-api/branches/vp-tree/pom.xml
+++ b/core3/presentation-api/branches/vp-tree/pom.xml
@@ -96,6 +96,12 @@
 			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>viewmodel-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
