Refactored version of visual property tree.  Tree structure is now managed in wrapper object VisualLexiconNode.
git-svn-id: http://chianti.ucsd.edu/svn@21961 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/vizmap-impl/branches/vp-tree/pom.xml
+++ b/core3/vizmap-impl/branches/vp-tree/pom.xml
@@ -176,5 +176,12 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>viewmodel-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
