--- a/cytoscape3/trunk/application/pom.xml
+++ b/cytoscape3/trunk/application/pom.xml
@@ -46,6 +46,19 @@
 			<artifactId>layout-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>layout-prefuse-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		
+    	<dependency>
+      		<groupId>cytoscape-temp</groupId>
+      		<artifactId>prefuse</artifactId>
+      		<version>20071021</version>
+    	</dependency>
+		
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-api</artifactId>
