--- a/core3/session-api/trunk/pom.xml
+++ b/core3/session-api/trunk/pom.xml
@@ -111,6 +111,11 @@
             <artifactId>viewmodel-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+                <dependency>
+            <groupId>org.cytoscape</groupId>
+            <artifactId>vizmap-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>presentation-api</artifactId>
