--- a/core3/session-api/trunk/pom.xml
+++ b/core3/session-api/trunk/pom.xml
@@ -137,6 +137,12 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.8.1</version>
+      <scope>test</scope>
+    </dependency>
     </dependencies>
 
 </project>
