--- a/cytoscape/trunk/archetypes/sample-plugin/pom.xml
+++ b/cytoscape/trunk/archetypes/sample-plugin/pom.xml
@@ -2,11 +2,18 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>cytoscape</groupId>
+
+  <parent>
+    <groupId>cytoscape.archetypes</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.8.0-beta2-SNAPSHOT</version>
+  </parent>
+
   <artifactId>sample-plugin</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
-  <name>sample-plugin</name>
+  <name>Sample Plugin Archetype</name>
+
   <build>
     <extensions>
       <extension>
