--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -19,6 +19,7 @@
     <module>javadoc</module>
     <module>packaging</module>
     <module>webstart</module>
+    <module>archetypes</module>
   </modules>
 
   <build>
