--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -268,6 +268,12 @@
       <version>1.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.2.1</version>
+    </dependency>
+
 	</dependencies>
 
 </project>
