--- a/core3/vizmap-gui-impl/branches/vp-tree/pom.xml
+++ b/core3/vizmap-gui-impl/branches/vp-tree/pom.xml
@@ -84,6 +84,12 @@
 			<artifactId>presentation-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>work-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>cytoscape</groupId>
