now using property-api
git-svn-id: http://chianti.ucsd.edu/svn@22152 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/work-swing-impl/trunk/pom.xml
+++ b/core3/work-swing-impl/trunk/pom.xml
@@ -181,7 +181,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>property</artifactId>
+			<artifactId>property-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
