now using property-api and property-impl
git-svn-id: http://chianti.ucsd.edu/svn@22154 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/cmdline-application/trunk/cmdline-provision/pom.xml
+++ b/core3/cmdline-application/trunk/cmdline-provision/pom.xml
@@ -226,9 +226,15 @@
 		<!-- for properties -->
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>property</artifactId>
+			<artifactId>property-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>property-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>com.springsource.javax.xml.bind</artifactId>
