--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -19,16 +19,6 @@
 
 
 	<dependencies>
-		<!--
-			<dependency> <groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.eventadmin</artifactId>
-			<version>1.0.0</version> </dependency> <dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-api</artifactId> <version>1.3.0</version>
-			</dependency> <dependency> <groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-service</artifactId> <version>1.3.0</version>
-			</dependency>
-		-->
 
 		<!-- Spring Framework Bundles -->
 		<dependency>
@@ -208,6 +198,13 @@
 			<artifactId>log-swing</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>property-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+
 		<dependency>  
 			<groupId>org.apache.commons</groupId>  
 			<artifactId>com.springsource.org.apache.commons.collections</artifactId>  
