changed to reflect new property handling and session api
git-svn-id: http://chianti.ucsd.edu/svn@22161 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -69,28 +69,6 @@
 					</instructions>
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.jvnet.jaxb2.maven2</groupId>
-                <artifactId>maven-jaxb2-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>session</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <schemaDirectory>src/main/resources/xsd</schemaDirectory>
-                            <schemaIncludes>
-                                <include>cysession.xsd</include>
-                            </schemaIncludes>
-                            <generatePackage>org.cytoscape.io.internal.generated</generatePackage>
-                            <verbose>true</verbose>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 		</plugins>
 	</build>
 
@@ -252,7 +230,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>property</artifactId>
+			<artifactId>property-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
