Add new property -- defaultLayoutAlgorithm
git-svn-id: http://chianti.ucsd.edu/svn@22206 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/application/src/main/resources/cytoscape.props
+++ b/cytoscape/trunk/application/src/main/resources/cytoscape.props
@@ -23,4 +23,4 @@ logger.console=false
 cytoscape.debug=false
 nestedNetworkSnapshotSize=400
 moduleNetworkViewCreationThreshold=5
-
+defaultLayoutAlgorithm=force-directed
