changed the prepare goals for release plugin so that the corelibs/docs project would install after building
git-svn-id: http://chianti.ucsd.edu/svn@22221 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -32,6 +32,9 @@
           <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/cytoscape/tags</tagBase>
           <autoVersionSubmodules>true</autoVersionSubmodules>
           <goals>deploy</goals>
+          <!-- we need this for corelibs/docs to be installed so that 
+               application will build correctly -->
+          <preparationGoals>clean install</preparationGoals>
         </configuration>
       </plugin>
       <plugin>
