--- a/cytoscape/trunk/archetypes/ant-sample-plugin/pom.xml
+++ b/cytoscape/trunk/archetypes/ant-sample-plugin/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>cytoscape.archetypes</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta2-SNAPSHOT</version>
+    <version>2.8.0-beta2</version>
   </parent>
 
   <artifactId>ant-sample-plugin</artifactId>
