--- a/cytoscape/trunk/coreplugins/browser/pom.xml
+++ b/cytoscape/trunk/coreplugins/browser/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta2-SNAPSHOT</version>
+    <version>2.8.0-beta2</version>
   </parent>
 
   <artifactId>attribute-browser</artifactId>
