--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -157,7 +157,18 @@
         <artifactId>layout-api</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
-
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>${junit.version}</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-all</artifactId>
+		<version>1.8.1</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
 
 </project>
