--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -72,17 +72,6 @@
           </instructions>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
  
@@ -168,6 +157,13 @@
         <artifactId>layout-api</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+		<groupId>org.cytoscape</groupId>
+		<artifactId>plugin-api</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<type>test-jar</type>
+		<scope>test</scope>
+	</dependency>
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
