git-svn-id: http://chianti.ucsd.edu/svn@22372 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -101,7 +101,7 @@ edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.visualPropertyType
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controllerType=-1
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic=0,0,204
-edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=51,51,51
+edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=0,0,0
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical&Genetic=0,153,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.genetic=255,0,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.physical=51,255,51
@@ -197,7 +197,7 @@ edgeLineStyleCalculator.BasicDiscrete.mapping.type=DiscreteMapping
 edgeLineStyleCalculator.BasicDiscrete.visualPropertyType=EDGE_LINE_STYLE
 edgeLineStyleCalculator.Complex\ Overview\ Style-EdgeLineStyleMapping.mapping.controller=interaction type
 edgeLineStyleCalculator.Complex\ Overview\ Style-EdgeLineStyleMapping.mapping.controllerType=-1
-edgeLineStyleCalculator.Complex\ Overview\ Style-EdgeLineStyleMapping.mapping.map.genetic=LONG_DASH
+edgeLineStyleCalculator.Complex\ Overview\ Style-EdgeLineStyleMapping.mapping.map.genetic=SOLID
 edgeLineStyleCalculator.Complex\ Overview\ Style-EdgeLineStyleMapping.mapping.map.physical=SOLID
 edgeLineStyleCalculator.Complex\ Overview\ Style-EdgeLineStyleMapping.mapping.type=DiscreteMapping
 edgeLineStyleCalculator.Complex\ Overview\ Style-EdgeLineStyleMapping.visualPropertyType=EDGE_LINE_STYLE
@@ -210,7 +210,7 @@ edgeLineStyleCalculator.InteractionType.visualPropertyType=EDGE_LINE_STYLE
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controllerType=-1
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Physical&Genetic=SOLID
-edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Genetic=LONG_DASH
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Genetic=SOLID
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Physical=SOLID
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.type=DiscreteMapping
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.visualPropertyType=EDGE_LINE_STYLE
@@ -348,10 +348,10 @@ globalAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeSelectionColor=255,0
 globalAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeReverseSelectionColor=0,255,0
 globalAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeSelectionColor=255,255,0
 globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultBackgroundColor=255,255,255
-globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeReverseSelectionColor=0,255,0
-globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSelectionColor=255,0,0
-globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeReverseSelectionColor=0,255,0
-globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSelectionColor=204,255,255
+globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeReverseSelectionColor=0,204,0
+globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSelectionColor=255,102,102
+globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeReverseSelectionColor=0,0,255
+globalAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSelectionColor=255,255,51
 globalAppearanceCalculator.default.defaultBackgroundColor=204,204,255
 globalAppearanceCalculator.default.defaultEdgeReverseSelectionColor=0,255,0
 globalAppearanceCalculator.default.defaultEdgeSelectionColor=255,0,0
