--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -22,27 +22,22 @@
 	</properties>
 
 	<distributionManagement>
-
 		<repository>
 			<id>releases</id>
 			<name>Internal Releases</name>
 			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases</url>
 		</repository>
-
-		<!-- NOTE that for snapshots to work (at least with Nexus) requires the 
-			artifact to be labelled using SNAPSHOT in uppercase, e.g. model-1.0-SNAPSHOT.jar -->
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>Internal Snapshots</name>
 			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
-
 	</distributionManagement>
-
 
 	<build>
 		<plugins>
 			<plugin>
+				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -60,7 +55,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- Plugin for generating Javadoc. -->
+				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
@@ -85,6 +80,7 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<executions>
@@ -96,7 +92,20 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<inherited>false</inherited>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+					<tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/parent/tags</tagBase>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<goals>deploy</goals>
+				</configuration>
+			</plugin>
+
 		</plugins>
+
 
 		<!-- this is the preferred method of deployment transport mechanism -->
 		<extensions>
@@ -112,47 +121,94 @@
 	<!-- these items don't exist in the typical public maven repos; we could 
 		add these directly to Nexus if desired -->
 	<repositories>
-
-		<!-- SpringSource OSGi Bundle Repository -->
-		<repository>
-			<id>com.springsource.repository.bundles.release</id>
-			<name>SpringSource OSGi Bundle Repository</name>
-			<url>http://repository.springsource.com/maven/bundles/release</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>com.springsource.repository.bundles.external</id>
-			<name>SpringSource OSGi Bundle Repository</name>
-			<url>http://repository.springsource.com/maven/bundles/external</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-
-		<repository>
-			<id>spring-osgified-artifacts</id>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<name>Springframework Maven OSGified Artifacts Repository</name>
-			<url>http://maven.springframework.org/osgi</url>
-		</repository>
-
-		<!-- Repo. of PAX project -->
-		<repository>
-			<id>ops4j.releases</id>
-			<url>http://repository.ops4j.org/maven2/</url>
-		</repository>
-
-		<!-- L2fProd Maven Repository -->
-		<repository>
-			<id>l2fprod-maven-repo</id>
-			<name>L2FProd.com Maven Repository</name>
-			<url>http://www.l2fprod.com/maven2/</url>
-		</repository>
-
+      <repository>
+          <id>cytoscape_snapshots</id>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <name>Cytoscape Snapshots</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_releases</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Releases</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_thirdparty</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Third Party</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/thirdparty/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_biopax_release</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape BioPAX Release Mirror</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/biopax-release/</url>
+       </repository>
+       <repository>
+          <id>cytoscape_biopax_snapshot</id>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <name>Cytoscape BioPAX Snapshot Mirror</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/biopax-snapshot/</url>
+       </repository>
+       <repository>
+          <id>ops4j-release</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Ops4j Release Mirror</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/ops4j-release/</url>
+       </repository>
+       <repository>
+          <id>l2fprod-release</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape L2fProd Release Mirror</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/l2fprod-release/</url>
+       </repository>
+       <repository>
+          <id>spring-osgi</id>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <name>Cytoscape Spring OSGi Release Mirror</name>
+          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/spring-osgi/</url>
+       </repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -170,6 +226,12 @@
 			<layout>legacy</layout>
 		</pluginRepository>
 	</pluginRepositories>
+
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/parent/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/parent/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/parent/trunk</url>
+  </scm>
 
 	<reporting>
 		<plugins>
