updates for release
git-svn-id: http://chianti.ucsd.edu/svn@22421 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -47,8 +47,7 @@
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
 					<compilerArguments>
-						<Xlint:all></Xlint:all>
-						<Xlint:-path></Xlint:-path>
+						<compilerArgument>-Xlint:all -Xlint:-path</compilerArgument>
 						<Xmaxwarns>10000</Xmaxwarns>
 						<Xmaxerrs>10000</Xmaxerrs>
 					</compilerArguments>
