--- a/csplugins/trunk/soc/sfederow/CyAnimator/build.xml
+++ b/csplugins/trunk/soc/sfederow/CyAnimator/build.xml
@@ -9,6 +9,7 @@
 
  	<!-- The directory containing source code -->
   	<property name="src.dir" value="src"/>
+	<property name="jar.dir" location="jar"/>	
 
 	<!--  The directory containing library jar files -->	
 	<property name="cytoroot.dir" value="../Cytoscape_v2.7.0"/>
@@ -21,10 +22,10 @@
   	<!-- Temporary build directories -->
 
  	<property name="build.dir" value="build"/>
-  	<property name="build.classes" value="${build.dir}/classes"/>
+  	
 
 	<property name="doc.dir" value="doc"/> 
-	<property name="pluginlib.dir" value="lib"/>
+	
 	<property name="plugindata.dir" value="data"/>
 
 	<!-- Global "magic" property for <javac> -->
@@ -41,25 +42,21 @@
 		<fileset dir="${release.dir}">
 			<include name="*.jar"/>
 		</fileset>
-		
-		<fileset dir="${pluginlib.dir}">
-			<include name="*.jar"/>
-		</fileset>
 
 	</path>
 
   	<!-- Target to create the build directories prior to compilation -->
   	<target name="prepare">
     		<mkdir dir="${build.dir}"/>
-    		<mkdir dir="${build.classes}"/>
+    		
         <!-- copy over images -->
- 	<copy file="${images.dir}/play.png" todir="${build.classes}/CyAnimator"/>
-  	<copy file="${images.dir}/pause.png" todir="${build.classes}/CyAnimator"/>
-        <copy file="${images.dir}/stop.png" todir="${build.classes}/CyAnimator"/>
-	<copy file="${images.dir}/fastForward.png" todir="${build.classes}/CyAnimator"/>
-        <copy file="${images.dir}/reverse.png" todir="${build.classes}/CyAnimator"/>
-        <copy file="${images.dir}/record.png" todir="${build.classes}/CyAnimator"/>
-        <copy file="resources/plugin.props" todir="${build.classes}/CyAnimator"/>
+ 	<copy file="${images.dir}/play.png" todir="${build.dir}/CyAnimator"/>
+  	<copy file="${images.dir}/pause.png" todir="${build.dir}/CyAnimator"/>
+        <copy file="${images.dir}/stop.png" todir="${build.dir}/CyAnimator"/>
+	<copy file="${images.dir}/fastForward.png" todir="${build.dir}/CyAnimator"/>
+        <copy file="${images.dir}/reverse.png" todir="${build.dir}/CyAnimator"/>
+        <copy file="${images.dir}/record.png" todir="${build.dir}/CyAnimator"/>
+        <copy file="resources/plugin.props" todir="${build.dir}/CyAnimator"/>
 
  
         <!-- <mkdir dir="${dist.dir}"/> -->
@@ -89,7 +86,7 @@
 	<!--  Target to compile all Plug In Code -->
   	<target name="compile" depends="prepare" 
 		description="Compiles all PlugIn source code.">
-                <javac debug="Yes" srcdir="${src.dir}" destdir="${build.classes}">
+                <javac debug="Yes" srcdir="${src.dir}" destdir="${build.dir}">
 			<classpath refid="classpath"/>
 		</javac>
 
@@ -97,24 +94,21 @@
   	
 	<!--  Create PlugIn Jar File (Unobfuscated) -->
    	<target name="jar" depends="compile" description="Creates PlugIn Jar File.">
+        <mkdir dir= "${jar.dir}"/>
+	<jar jarfile = "${jar.dir}/${plugin.name}.jar">        
+	<manifest>
+	    <attribute name="Cytoscape-Plugin" value="CyAnimator.CyAnimator" />
+	</manifest>
+	<fileset dir="${build.dir}"/>
+	</jar>
 
-        <unjar dest="${build.classes}">
-         <fileset dir="${pluginlib.dir}"/>
-        </unjar>
 
-      <copy file="plugin.props" todir="${build.classes}" />
 
-      <jar destfile="${build.dir}/${plugin.name}.jar">
-        <fileset dir="${build.classes}"/>
-		<manifest>
-         <attribute name="Cytoscape-Plugin"
-                    value="CyAnimator" />
-         </manifest>
 
-        </jar>
+
    		 
- 		<echo message="${plugin.name}.jar is now complete.  It is located in build/ directory"/>
-   		<copy file="${build.dir}/${plugin.name}.jar" todir="../Cytoscape_v2.7.0/plugins/"/>
+ 		<echo message="${plugin.name}.jar is now complete.  It is located in jar/ directory"/>
+   		<copy file="${jar.dir}/${plugin.name}.jar" todir="../Cytoscape_v2.7.0/plugins/"/>
 	</target>
 
 </project>
