--- a/csplugins/trunk/soc/sfederow/CyAnimator/resources/plugin.props
+++ b/csplugins/trunk/soc/sfederow/CyAnimator/resources/plugin.props
@@ -24,11 +24,11 @@ pluginCategory=Other
 # -- The following properties are OPTIONAL -- #
 
 # URL to a website that gives more information about your plugin, Ex. http://my-lab-site.org
-projectURL=
+projectURL=http://socrates2.cgl.ucsf.edu/GenMAPP/wiki/Google_Summer_of_Code_2009/Steve
 
 # List of authors.  Note each author and institution pair are separated by a : (colon)
 # each additional author institution pair must be separated from other pairs bye a ; (semicolon)
-pluginAuthorsIntsitutions=Steve Federowicz:Google Summer of Code;John "Scooter" Morris:UCSF
+pluginAuthorsInstitutions=Steve Federowicz:UCSD;John "Scooter" Morris:UCSF
 
 # Date this plugin/plugin version was released
-releaseDate=September 16, 2009
+releaseDate=October 26, 2010
