--- a/core3/event-api/trunk/pom.xml
+++ b/core3/event-api/trunk/pom.xml
@@ -22,9 +22,9 @@
   <packaging>bundle</packaging>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/event-api/tags/event-api-3.0.0-alpha1</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/event-api/tags/event-api-3.0.0-alpha1</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/event-api/tags/event-api-3.0.0-alpha1</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/event-api/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/event-api/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/event-api/trunk</url>
   </scm>
 
 
