--- a/core3/event-api/trunk/pom.xml
+++ b/core3/event-api/trunk/pom.xml
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>event-api</artifactId>
-  <version>3.0.0-alpha1</version>
+  <version>1.0-SNAPSHOT</version>
 
   <name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
