--- a/core3/integration-test-support/trunk/pom.xml
+++ b/core3/integration-test-support/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha2</version>
 	</parent>
 
 	<properties>
@@ -23,8 +23,13 @@
 
 	<packaging>bundle</packaging>
 
+	<scm>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/integration-test-support/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/integration-test-support/trunk</url>
+	</scm>
+
 	<repositories>
-		<!-- bootstrap for cytoscape , namely the parent POM snapshots -->
 		<repository>
 			<id>cytoscape_snapshots</id>
 			<snapshots>
@@ -36,7 +41,6 @@
 			<name>Cytoscape Snapshots</name>
 			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
 		</repository>
-		<!-- bootstrap for cytoscape d, namely the parent POM releases -->
 		<repository>
 			<id>cytoscape_releases</id>
 			<snapshots>
@@ -48,39 +52,21 @@
 			<name>Cytoscape Releases</name>
 			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
 		</repository>
-
 		<repository>
-			<id>i21-s3-osgi-repo</id>
-			<name>i21 osgi artifacts repo</name>
+			<id>spring-osgi</id>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
-			<url>http://maven.springframework.org/osgi</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Cytoscape Spring OSGi Release Mirror</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/spring-osgi/</url>
 		</repository>
 	</repositories>
 
-
   <build>
     <plugins>
-	<!--
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attached</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-	  -->
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
@@ -118,11 +104,14 @@
 			<artifactId>spring-osgi-extender</artifactId>
 			<version>${spring.osgi.version}</version>
 		</dependency>
+		<!-- Omitting because this is a snapshot and
+		     everything seems to work without it!
 		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>log4j.osgi</artifactId>
 			<version>1.2.15-SNAPSHOT</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>com.springsource.slf4j.api</artifactId>
