--- a/core3/event-impl/trunk/pom.xml
+++ b/core3/event-impl/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha2</version>
 	</parent>
 
 	<properties>
@@ -22,6 +22,12 @@
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
+
+	<scm>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/event-impl/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/event-impl/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/event-impl/trunk</url>
+	</scm>
 
 	<build>
 		<resources>
@@ -73,7 +79,6 @@
 					</instructions>
 				</configuration>
 			</plugin>
-
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
         <version>2.4.1</version>
@@ -127,8 +132,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-
 		</plugins>
 	</build>
 
@@ -163,7 +166,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -182,11 +185,10 @@
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
-
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -202,13 +204,12 @@
 			<version>1.0</version>
 			<scope>test</scope>
 		</dependency>
-
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>integration-test-support</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>integration-test-support</artifactId>
+			<version>3.0.0-alpha1</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
