fixed problem with dependencies
git-svn-id: http://chianti.ucsd.edu/svn@22491 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/integration-test-support/trunk/pom.xml
+++ b/core3/integration-test-support/trunk/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>3.0.0-alpha2</version>
+		<version>3.0.0-alpha3</version>
 	</parent>
 
 	<properties>
@@ -61,6 +61,17 @@
 			<name>Cytoscape Spring OSGi Release Mirror</name>
 			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/spring-osgi/</url>
 		</repository>
+		<repository>
+			<id>spring-osgi-snapshots</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<name>Cytoscape Spring OSGi Snapshot Mirror</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/spring-osgi-snapshots/</url>
+		</repository>
 	</repositories>
 
   <build>
@@ -102,14 +113,11 @@
 			<artifactId>spring-osgi-extender</artifactId>
 			<version>${spring.osgi.version}</version>
 		</dependency>
-		<!-- Omitting because this is a snapshot and
-		     everything seems to work without it!
 		<dependency>
 			<groupId>org.springframework.osgi</groupId>
 			<artifactId>log4j.osgi</artifactId>
 			<version>1.2.15-SNAPSHOT</version>
 		</dependency>
-		-->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>com.springsource.slf4j.api</artifactId>
