--- a/core3/property-impl/trunk/pom.xml
+++ b/core3/property-impl/trunk/pom.xml
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>property-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
